For video-switch we add regules then before 768px not display and after display. We fix to display-block, postion and position from top and from left. We add z-index correctly. For switch we add position-relative, we fix width, background, text uppercase, padding, cursor, border radius and add display-flex and justify-content-space-between. For button into switch we add position-absolute and position from top and left, height 100% ofcourse and width 50%. We add background color, suitable border-radius and transdition for switching. We create only in css class btnSlide for another state when switched with regule left 50% - we add in JS file jQuery function.

--- a/css/main.css
+++ b/css/main.css
@@ -174,3 +174,40 @@ body{
 .social-icon-instagram {
   color: #cd486b;
 }
+/* video switch */
+.video__switch-container {
+  display: none;
+}
+@media screen and (min-width:768px){
+  .video__switch-container{
+    display: block;
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    z-index: 3;
+  }
+  .video__switch{
+    position: relative;
+    width: 5rem;
+    background: var(--yellow);
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.25rem;
+    cursor: pointer;
+    border-radius: 0.5rem;
+  }
+  .video__switch-btn{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 50%;
+    background: var(--blue);
+    border-radius: 0.5rem;
+    transition: all 0.3s ease;
+  }
+  .btnSlide{
+    left: 50%;
+  }
+}
